[package]
name = "scaffolder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
crossterm = "0.27.0"
ratatui = "0.24.0"
serde = "1.0.192"
serde_yaml = "0.9.27"
slab_tree = "0.3.2"
termtree = "0.4.1"
user-error = "1.2.8"
